--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Manos Portfolio</title>
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="custom.js"></script>
     <link href="custom.css" type="text/css" rel="stylesheet"/>
 </head>
@@ -348,27 +348,27 @@
             <h2>Useful Links</h2>
             <ul id="work_links">
                 <li>Employers</li>
-                <li><a target="_blank" class='organization' href="http://www.sanofi.gr/l/gr/el/index.jsp"><span>Sanofi Aventis</span><img src="images/organizations/sanofiaventis_thumb.jpg"/> Pharmaceutical Company</a></li>
+                <li><a target="_blank" class='organization' href="https://www.sanofi.gr/l/gr/el/index.jsp"><span>Sanofi Aventis</span><img src="images/organizations/sanofiaventis_thumb.jpg"/> Pharmaceutical Company</a></li>
                 <li>References</a></li>
-                <li><a target="_blank" class='person' href="http://fr.linkedin.com/pub/markos-gerassopoulos/42/b92/b07">M.Gerassopoulos | GM Director</a></li>
-                <li><a target="_blank" class='person' href="http://gr.linkedin.com/pub/aspa-pispa/13/a3b/b67">A.Pispa | HR Director</a></li>
-                <li><a target="_blank" class='person' href="http://gr.linkedin.com/pub/andreas-katsis/17/1b2/3ba">A.Katsis | Finance Director</a></li>
+                <li><a target="_blank" class='person' href="https://fr.linkedin.com/pub/markos-gerassopoulos/42/b92/b07">M.Gerassopoulos | GM Director</a></li>
+                <li><a target="_blank" class='person' href="https://gr.linkedin.com/pub/aspa-pispa/13/a3b/b67">A.Pispa | HR Director</a></li>
+                <li><a target="_blank" class='person' href="https://gr.linkedin.com/pub/andreas-katsis/17/1b2/3ba">A.Katsis | Finance Director</a></li>
             </ul>
             <ul id="study_links">
                 <li>Education</li>
-                <li><a target="_blank" class='organization' href="http://www2.gre.ac.uk/"><span>University of Greenwich</span><img src="images/organizations/greenwich_thumb.jpg"/></a> in Association with <a target="_blank" class="organization"
-                                                                                                                                                                                                               href="http://www.nyc.gr"><span>New York College</span><img
+                <li><a target="_blank" class='organization' href="https://www2.gre.ac.uk/"><span>University of Greenwich</span><img src="images/organizations/greenwich_thumb.jpg"/></a> in Association with <a target="_blank" class="organization"
+                                                                                                                                                                                                               href="https://www.nyc.gr"><span>New York College</span><img
                         src="images/organizations/newyorkcollege_thumb.jpg"/> </a></li>
                 <li>References</li>
-                <li><a target="_blank" class='person' href="http://gr.linkedin.com/pub/michael-hands/30/8ba/61b">M.Hands | University of Greenwich</a></li>
-                <li><a target="_blank" class='person' href="http://gr.linkedin.com/pub/petros-bofakos/a/149/b90">P.Bofakos | University of Greenwich</a></li>
-                <li><a target="_blank" class='person' href="http://www.linkedin.com/in/ioannischatzis">I.Chatzis | University of Greenwich</a></li>
-                <li><a target="_blank" class='person' href="http://gr.linkedin.com/pub/ariadne-beatrice-kapetanaki/39/75b/50b">A.B.Kapetanaki | University of Greenwich</a></li>
+                <li><a target="_blank" class='person' href="https://gr.linkedin.com/pub/michael-hands/30/8ba/61b">M.Hands | University of Greenwich</a></li>
+                <li><a target="_blank" class='person' href="https://gr.linkedin.com/pub/petros-bofakos/a/149/b90">P.Bofakos | University of Greenwich</a></li>
+                <li><a target="_blank" class='person' href="https://www.linkedin.com/in/ioannischatzis">I.Chatzis | University of Greenwich</a></li>
+                <li><a target="_blank" class='person' href="https://gr.linkedin.com/pub/ariadne-beatrice-kapetanaki/39/75b/50b">A.B.Kapetanaki | University of Greenwich</a></li>
                 <li><a target="_blank" class='person' href="https://www.facebook.com/ioannis.pandithas?fref=ts">G.Pandidas | University of Greenwich</a></li>
-                <li><a target="_blank" class='organization' href="http://www.intergraphics.gr/"><span>Intergraphics</span><img src="images/organizations/intergraphics_thumb.jpg"/> Vocational Institute</a></li>
+                <li><a target="_blank" class='organization' href="https://www.intergraphics.gr/"><span>Intergraphics</span><img src="images/organizations/intergraphics_thumb.jpg"/> Vocational Institute</a></li>
                 <li>References</li>
-                <li><a target="_blank" class='person' href="http://gr.linkedin.com/pub/leonidas-tsaras/3/674/726">L.Tsaras | Intergraphics</a></li>
-                <li><a target="_blank" class='organization' href="http://www.iek-akmi.gr/"><span>AKMI </span><img src="images/organizations/akmi_thumb.jpg"/> Vocational Institute</a></li>
+                <li><a target="_blank" class='person' href="https://gr.linkedin.com/pub/leonidas-tsaras/3/674/726">L.Tsaras | Intergraphics</a></li>
+                <li><a target="_blank" class='organization' href="https://www.iek-akmi.gr/"><span>AKMI </span><img src="images/organizations/akmi_thumb.jpg"/> Vocational Institute</a></li>
             </ul>
             <ul id="certificate_links">
                 <li>Certificates</li>
@@ -381,7 +381,7 @@
                 <li>Social Net</li>
                 <li>Share</li>
                 <li>
-                    <div class="fb-like" data-href="http://developers.facebook.com/docs/reference/plugins/like" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+                    <div class="fb-like" data-href="https://developers.facebook.com/docs/reference/plugins/like" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
                 </li>
                 <li>
                     <div class="g-plusone" data-annotation="inline" data-width="300"></div>
@@ -389,7 +389,7 @@
                 <li>Contact</li>
                 <li><a href="https://www.facebook.com/manoszalokostas" target="_blank"><img src="images/organizations/facebook.jpg"/>Facebook</a></li>
                 <li><a href="https://plus.google.com/116413132089341421459/posts" target="_blank"><img src="images/organizations/google.jpg"/>Google+</a></li>
-                <li><a href="http://www.linkedin.com/profile/view?id=115879291&trk=nav_responsive_tab_profile" target="_blank"><img src="images/organizations/linkedin.jpg"/>Linkedin</a></li>
+                <li><a href="https://www.linkedin.com/profile/view?id=115879291&trk=nav_responsive_tab_profile" target="_blank"><img src="images/organizations/linkedin.jpg"/>Linkedin</a></li>
             </ul>
         </div>
     </div>
