#SERVER | SERVE DEFAULT PAGE **********************************  - SETUP SERVER CONFIG AND SERVE THE ORIGINAL PAGE AS DEFAULT  - MODIFY THE SERVER TO ALLOW REQUESTS FOR '.JS', '.CSS', '.XML', PICUTRES etc..

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Manos Portfolio</title>
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="custom.js"></script>
-    <link href="custom.css" type="text/css" rel="stylesheet"/>
+    <script type="text/javascript" src="./custom.js"></script>
+    <link type="text/css" rel="stylesheet" href="custom.css"/>
 </head>
 <body>
 <div id="view">
@@ -357,8 +357,8 @@
             <ul id="study_links">
                 <li>Education</li>
                 <li><a target="_blank" class='organization' href="https://www2.gre.ac.uk/"><span>University of Greenwich</span><img src="images/organizations/greenwich_thumb.jpg"/></a> in Association with <a target="_blank" class="organization"
-                                                                                                                                                                                                               href="https://www.nyc.gr"><span>New York College</span><img
-                        src="images/organizations/newyorkcollege_thumb.jpg"/> </a></li>
+                                                                                                                                                                                                                href="https://www.nyc.gr"><span>New York College</span><img
+                    src="images/organizations/newyorkcollege_thumb.jpg"/> </a></li>
                 <li>References</li>
                 <li><a target="_blank" class='person' href="https://gr.linkedin.com/pub/michael-hands/30/8ba/61b">M.Hands | University of Greenwich</a></li>
                 <li><a target="_blank" class='person' href="https://gr.linkedin.com/pub/petros-bofakos/a/149/b90">P.Bofakos | University of Greenwich</a></li>
@@ -395,13 +395,20 @@
     </div>
 </div>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-35983632-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-35983632-1', 'auto');
+    ga('send', 'pageview');
 
 </script>
 </body>
