--- a/index.html
+++ b/index.html
@@ -2,98 +2,57 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Manos Portfolio</title>
-    <script defer src="https://code.jquery.com/jquery-1.9.1.js"></script>
-    <script defer type="text/javascript" src="./custom.js"></script>
-    <link type="text/css" rel="stylesheet" href="custom.css"/>
+    <title>MiCV</title>
     <script>
 
-        const params = {
-            page:'monitor',
-            view:'list'
+        const http = {
+            page: 'builder',
+            view: 'list',
+            type: 'web'
         };
+
 
         const app = {
             data: undefined,
+            actions: {},
             utils: {
-                getAsyncModule: async function (params, o) {
+                getAsyncModule: async (params, o) => {
                     let fnModule = await  import(params.page);
-                    return fnModule.default(params);
+                    return fnModule.default(params, app);
                 },
-                renderModule: function (selector, content) {
-                    document.querySelector(selector).innerHTML = content;
+                renderModule: (selector, content, css) => {
+                    document.querySelector(selector).innerHTML = content.concat(css);
                 },
-            }
+                strReduceSpace: (str) => str && str.replace(/\s{2,}/g, '')
+            },
+            importer: async (HTTP, PAGE, NODE, INDEX) => {
+                if (HTTP.page === NODE) {
+                    HTTP.page = PAGE;
+                    let module = await app.utils.getAsyncModule(HTTP, app);
+
+                    app.actions[INDEX] = module.actions;
+                    app.utils.renderModule(
+                        '#' + NODE,
+                        module.content,
+                        app.utils.strReduceSpace(module.css)
+                    );
+                }
+            },
         }
+
     </script>
 </head>
 <body>
-<div id="view">
-    <div id="wrapper">
+<div id="builder">
+    <script type="module">
 
+        let page = './PAGES/introduction.mjs',
+            node = 'builder',
+            view = 'resume';
 
-        <div id="navigation">
-            <script type="module">
-                // import navigation from './part/navigation.mjs';
-                //
-                // loadElement(navigation);
-                // console.log(1)
-            </script>
-        </div>
+        app.importer(http, page, node, view);
 
-
-        <div id="introduction">
-            <script type="module">
-                params.page ==='monitor' && (async () => {
-                        params.page= './page/introduction.mjs';
-                        params.node = '#introduction';
-                        let module = await app.utils.getAsyncModule(params, app);
-                        app.utils.renderModule('#introduction', module.content);
-                    }
-                )()
-            </script>
-        </div>
-
-
-        <!--<div id="showcase">-->
-        <!--<script type="module">-->
-        <!--(async () => {-->
-        <!--let module = await  import('./page/showcase.mjs');-->
-        <!--debugger;-->
-        <!--module.default.load();-->
-        <!--})()-->
-        <!--</script>-->
-        <!--</div>-->
-
-
-        <!--<div id="references">-->
-        <!--<script type="module">-->
-        <!--(async () => {-->
-        <!--let module = await  import('./page/references.mjs');-->
-        <!--debugger;-->
-        <!--module.default.load();-->
-        <!--})()-->
-        <!--</script>-->
-        <!--</div>-->
-
-
-    </div>
+    </script>
 </div>
-<script>
-    // (function (i, s, o, g, r, a, m) {
-    //     i['GoogleAnalyticsObject'] = r;
-    //     i[r] = i[r] || function () {
-    //         (i[r].q = i[r].q || []).push(arguments)
-    //     }, i[r].l = 1 * new Date();
-    //     a = s.createElement(o),
-    //         m = s.getElementsByTagName(o)[0];
-    //     a.async = 1;
-    //     a.src = g;
-    //     m.parentNode.insertBefore(a, m)
-    // })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    //
-    // ga('create', 'UA-35983632-1', 'auto');
-    // ga('send', 'pageview');
-</script>
 </body>
 </html>
