Populate the "links" section instaed of 1 link allowed before

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     <div id="iscreenshots"><span></span></div>
                 </div>
                 <div id="iextra">
-                    <div id="ilink">
+                    <div id="ilinks">
                         <strong>Link</strong>
                         <span></span>
                     </div>
