Add site search for 'projects' & 'skills'

--- a/index.html
+++ b/index.html
@@ -23,6 +23,31 @@
                     <li><a id="interactive_cv" href="#">Interactive</a></li>
                     <li><a id="document_cv" href="#">Document</a></li>
                 </ul>
+
+                <div id="search">
+                    <div id="search_radio">
+                        <div>
+                            <label>
+                                project
+                                <input type="radio" name="search" value="project" checked>
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                skill
+                                <input type="radio" name="search" value="skill">
+                            </label>
+                        </div>
+                    </div>
+                    <div id="search_result">
+                        <input list="project_list">
+                        <datalist id="project_list">
+                        </datalist>
+                        <datalist id="skill_list">
+                        </datalist>
+                    </div>
+                </div>
+
             </div>
             <h1>Resume</h1>
             <div id="skills_preview" class="monitor">
@@ -104,10 +129,12 @@
                             <!--                                <br/><br/></i>-->
 
 
-                            <strong> In 2018, 2nd half</strong> Still employeed by Cosmores I started developing Rateparity as single Frontend Developer building with the latest ES6+ upgrade and the popular React Js library and in collab with a remote datastore in the Backend . <i>Developing customizable, one-line-installation CORS Widgets for enriching the user experience on customers sites. Additionally developing the configuration app in the backend for widgets customization and usage monitoring and evaluation.</i>
+                            <strong> In 2018, 2nd half</strong> Still employeed by Cosmores I started developing Rateparity as single Frontend Developer building with the latest ES6+ upgrade and the popular React Js library and in collab with a remote datastore in the Backend . <i>Developing
+                            customizable, one-line-installation CORS Widgets for enriching the user experience on customers sites. Additionally developing the configuration app in the backend for widgets customization and usage monitoring and evaluation.</i>
                             <br/><br/>
 
-                            <strong> In 2017, 2nd half</strong> Employeed by Cosmores as in-house Fullstack Developer with the PHP-MySQL and plain Js / Jquery <i>in the backend and frontend respectively. The mission was to upgrade, extend, maintain and enforce security processes on many parts of the company's daily routines.</i>
+                            <strong> In 2017, 2nd half</strong> Employeed by Cosmores as in-house Fullstack Developer with the PHP-MySQL and plain Js / Jquery <i>in the backend and frontend respectively. The mission was to upgrade, extend, maintain and enforce security processes on many parts of the
+                            company's daily routines.</i>
                             <br/><br/>
 
                             <strong> In 2017, 1st half</strong> Contracted as freelance, standalone Full stack Developer to design and build a warehouse inventory for Ecep Technologies <i> The English, London enterpreneur needed a .weba monitoring system that could keep track of products, purchases,
@@ -254,13 +281,15 @@
                         <li class="std_end_off"><a href="#" title="Graduate 'Internet Engineering & Web Management' ">2012</a>
                             <p title="item_label">Graduate 'Internet Engineer and Web Management' | University of Greenwich</p>
                             <p title="item_skills">
-                                Graduated College with a 'first class honors' degree from University and attached a 'student of the year' distinction for last year performance. My final Thesis was proposed for adoption by the associated 'New York College' for Maintaining and Scheduling institute's year resources.
+                                Graduated College with a 'first class honors' degree from University and attached a 'student of the year' distinction for last year performance. My final Thesis was proposed for adoption by the associated 'New York College' for Maintaining and Scheduling institute's
+                                year resources.
                             </p>
                         </li>
                         <li class="job_start_off"><a href="#" title="Self-employed as 'Web Designer and Developer' ">2013</a>
                             <p title="item_label">Self-Employeed 'Web Design and Development'</p>
                             <p title="item_skills">
-                                Take over freelance projects for local merchants. Mainly invoked hardcoded storefronts and web solutions completely designed and developed from scratch, grounded on web technologies like PHP, JS, XSLT, HTML5, CSS3 more. Most prominent project, ELGREG, a mixture of all afordmentioned techs provided a hardcoded bottom-up storefront and backend portal.
+                                Take over freelance projects for local merchants. Mainly invoked hardcoded storefronts and web solutions completely designed and developed from scratch, grounded on web technologies like PHP, JS, XSLT, HTML5, CSS3 more. Most prominent project, ELGREG, a mixture of all
+                                afordmentioned techs provided a hardcoded bottom-up storefront and backend portal.
                             </p>
                         </li>
                         <li class="job_start_off"><a href="#" title="Short Passings from 'Deltacosmos' and 'CCS Education'' ">2014</a>
@@ -272,19 +301,22 @@
                         <li class="job_start_off"><a href="#" title="Contracted to 'Interactive Data' as Front-end Developer for German 'Commerzbank' intranet">2015</a>
                             <p title="item_label">Contracted 'Remote Web Developer' for German 'Commerzbank Infobroker'</p>
                             <p title="item_skills">
-                                Occupied as a part of Scrum maintained, multicultural developers environment for the implementation of Commerzbank Intranet project, namely Infobroker. Main responsibility was to collect, design and retrieve proprietary data - or complete data-views - through Interactive Data web services, using a custom graphical interface of enterprise. The final output would be visually styled for web monitoring, dictated strictly through customer specifications.
+                                Occupied as a part of Scrum maintained, multicultural developers environment for the implementation of Commerzbank Intranet project, namely Infobroker. Main responsibility was to collect, design and retrieve proprietary data - or complete data-views - through
+                                Interactive Data web services, using a custom graphical interface of enterprise. The final output would be visually styled for web monitoring, dictated strictly through customer specifications.
                             </p>
                         </li>
                         <li class="job_start_off"><a href="#" title="Contracted remotely as Full Stack Developer to 'Seecago' for American Noblelinx CRM">2016</a>
                             <p title="item_label">Contracted 'Remote Full Stack Developer' for American 'Noblelinx CRM'</p>
                             <p title="item_skills">
-                                Occupied remotely as standalone Full Stack Developer in Agile mode with the Manager, on a lecacy CRM system, originated nearly a decade backwards. Key assingment was to maintain and upgrade legacy coded mixed technologies, to more efficient, controllable environment and to design and adjust new features that would add value to company's daily routines.
+                                Occupied remotely as standalone Full Stack Developer in Agile mode with the Manager, on a lecacy CRM system, originated nearly a decade backwards. Key assingment was to maintain and upgrade legacy coded mixed technologies, to more efficient, controllable environment
+                                and to design and adjust new features that would add value to company's daily routines.
                             </p>
                         </li>
                         <li class="job_start_off"><a href="#" title="Contracted remotely as Full Stack Developer for London-based company 'ECEP Technologies' ">2017</a>
                             <p title="item_label">Contracted remotely as Full Stack Developer for London-based company 'ECEP Technologies'</p>
                             <p title="item_skills">
-                                Contracted as freelance, standalone Full stack Developer to design and build a warehouse inventory for Ecep Technologies .The English, Londoner enterpreneur needed a .weba monitoring system that could keep track of products, purchases, deliveries and sales activities of the company. The tool that was used was Laravel 5.1 MVC
+                                Contracted as freelance, standalone Full stack Developer to design and build a warehouse inventory for Ecep Technologies .The English, Londoner enterpreneur needed a .weba monitoring system that could keep track of products, purchases, deliveries and sales activities
+                                of the company. The tool that was used was Laravel 5.1 MVC
                             </p>
                         </li>
                         <li class="job_start_off"><a href="#" title="Employeed by domestic company Cosmores as in-house Fullstack Developer ">2017</a>
@@ -294,9 +326,10 @@
                             </p>
                         </li>
                         <li class="job_start_off"><a href="#" title="Employeed by Cosmores I started developing Rateparity as single Frontend Developer ">2018</a>
-                            <p title="item_label">Developing Rateparity as single Frontend Developer, while still employeed by Cosmores  '</p>
+                            <p title="item_label">Developing Rateparity as single Frontend Developer, while still employeed by Cosmores '</p>
                             <p title="item_skills">
-                                Still employeed by Cosmores I started developing Rateparity as single Frontend Developer building with the latest ES6+ upgrade and the popular React Js library and in collab with a remote datastore in the Backend. Developing customizable, one-line-installation CORS Widgets for enriching the user experience on customers sites. Additionally developing the configuration app in the backend for widgets customization and usage monitoring and evaluation
+                                Still employeed by Cosmores I started developing Rateparity as single Frontend Developer building with the latest ES6+ upgrade and the popular React Js library and in collab with a remote datastore in the Backend. Developing customizable, one-line-installation CORS
+                                Widgets for enriching the user experience on customers sites. Additionally developing the configuration app in the backend for widgets customization and usage monitoring and evaluation
                             </p>
                         </li>
                     </ul>
